<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.pcapremote.myapplication.MainActivity">

    <item
        android:id="@+id/action_start_capturing"
        android:orderInCategory="100"
        android:icon="@drawable/ic_start_capturing"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction,MenuTitle" />

    <item
        android:id="@+id/action_start_capturing_single_app"
        android:orderInCategory="100"
        android:icon="@drawable/ic_start_capturing_single_app"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction, MenuTitle" />

    <item
        android:id="@+id/action_stop_capturing"
        android:orderInCategory="100"
        android:icon="@drawable/ic_stop_capturing"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction, MenuTitle" />

    <item
        android:id="@+id/action_info"
        android:orderInCategory="100"
        android:title="@string/action_info"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_display_network_interfaces"
        android:orderInCategory="100"
        android:title="@string/action_reload_network_interfaces"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_feedback"
        android:orderInCategory="100"
        android:title="@string/action_feedback"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_rate_app"
        android:orderInCategory="100"
        android:title="@string/action_rate_app"
        app:showAsAction="never" />

<!--    <item-->
<!--        android:id="@+id/action_support_app"-->
<!--        android:orderInCategory="100"-->
<!--        android:title="@string/action_support_app"-->
<!--        app:showAsAction="never" />-->
</menu>
